--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="reset.css">
 </head>
 <body>
-    
+    <header class="cabecalho">
+        <span class="cabecalho-menu-hamburguer"></span>
+        <img src="./img/image copy.png" alt="logo da alurabooks">
+        <a href="#"><img src="./img/image copy 4.png" alt="meus favoritos"></a>
+        <a href="#"><img src="./img/image copy 2.png" alt="Sacola de compras"></a>
+        <a href="#"><img src="/img/image copy 3.png" alt="meu perfil"></a>
+    </header>
 </body>
 </html>
